--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
     "validator": "^13.15.15"
