--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "method-override": "^3.0.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
@@ -23,7 +24,6 @@
     "start": "nodemon index.js",
     "database": "node ./src/config/createDatabase.js",
     "runtable": "node ./src/models/index.js"
-    
   },
   "author": "",
   "license": "ISC",
